test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 02 Mar 2026 03:17:05 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="BI8dWKOAd/f4QiDelPFD/bpxL+Qr/RIk", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}